[package]
name = "yu"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
chrono = "0.4.0"
futures = "0.3.1"
mockito = "0.22.0"
reqwest = "0.9.22"
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde = "1.0.102"
toml = "0.5.5"
